<resources>
    <string name="app_name">Cartello</string>
    <string name="no_results">No Data Available.</string>
    <string name="error_login_server_error">Error Occurred.</string>
    <string name="error_login_server_unknown_error">Unknown Error.</string>
    <string name="forgetPassword">
        <u>Forget Password?</u>
    </string>
    <string name="edit_action">
        <u>Edit</u>
    </string>
    <string name="error_email_password_incorrect">Password or Email is incorrect Kindly check them again.</string>
    <string name="skip_now">Skip now</string>
    <string name="email">Email</string>
    <string name="code">Code</string>

    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="verify_password">Verify Password</string>

    <string name="name">Name</string>
    <string name="fullName">Full Name</string>
    <string name="userName">User Name</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="birthOfDate">Birth Of Date</string>
    <string name="hintCity">City</string>
    <string name="hintArea">Area</string>
    <string name="hintAddress">Address</string>
    <string name="addresses">Addresses</string>

    <string name="hintApt">Apt</string>
    <string name="hintFloor">Floor</string>
    <string name="hintLandMark">Land Mark</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="new_medical">New Prescription</string>
    <string name="capture">Capture</string>
    <string name="gallery">Upload From Gallery</string>


    <string name="add_new">Add+</string>

    <string name="save">Save</string>
    <string name="send">Send</string>

    <string name="selectCity">Select City ...</string>
    <string name="selectArea">Select Area ...</string>
    <string name="titleCreateAddress">Create your address</string>
    <string name="nameNotation">ex - Work,Home,...</string>

    <string name="error_name">Name should be 4 letters.</string>
    <string name="error_address">Address should more than 4 chars.</string>
    <string name="missing">Missing</string>
    <string name="required">Required</string>

    <string name="error_phone">Phone No. 11 digit.</string>
    <string name="error_date">Invalid date.</string>
    <string name="error_confirm_password">Passwords Does not match.</string>


    <string name="welcome_back">Welcome Back!</string>
    <string name="start_grocery">Start getting fast grocery!</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="proceed">Proceed</string>

    <string name="or_sign_in_with">Or sign in with</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_email_not_registered">The email is not registered</string>
    <string name="info_email_validation">A reset li</string>


    <string name="error_invalid_code">Invalid Code</string>
    <string name="error_incorrect_code">Incorrect Code.</string>


    <string name="error_password">Password at least 8 characters</string>
    <string name="error_no_internet">No Internet Connection</string>
    <string name="success">Success</string>
    <string name="error_network">Network Error.</string>
    <string name="terms_conditions"><u>Terms &amp; Conditions</u></string>
    <string name="create_address">Create your address</string>
    <string name="facebook_app_id">2072726479688652</string>
    <string name="fb_login_protocol_scheme">fb2072726479688652</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="submit">Submit</string>
    <string name="info">We’ve sent you a resetting code to your email inbox </string>
    <string name="resend">Resend</string>
    <string name="log_in">Log in</string>

    <string name="forget_password">Forgot Password</string>
    <string name="tab_home">Home</string>
    <string name="top_promotions">Top Promotions</string>
    <string name="most_selling">Most Selling</string>
    <string name="product_details">Product details</string>
    <string name="my_cart">My Cart</string>
    <string name="cart_add">Add To Cart</string>

    <string name="active_orders">Active Orders</string>
    <string name="favourite">Favourites</string>

    <string name="order_id">Order ID :</string>
    <string name="order_total_amount">Total Amount</string>
    <string name="total">Total</string>
    <string name="total_1">Total:</string>
    <string name="products">Products</string>


    <string name="order_payment_type">Payment Type</string>
    <string name="history">History</string>
    <string name="no_orders">No Orders</string>
    <string name="no_products">No Products available</string>

    <string name="no_orders_active">No Active Orders</string>
    <string name="placed">Placed</string>

    <string name="processing">Processing</string>

    <string name="delivering">Delivering</string>

    <string name="completed">Completed</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="medical_prescriptions">Medical Prescriptions</string>
    <string name="orders">Orders</string>
    <string name="more">More</string>
    <string name="currency">LE</string>
    <string name="product_name">Product Name</string>
    <string name="category">Category</string>
    <string name="product_type">Product Type</string>
    <string name="similar_products">Similar Products</string>
    <string name="notes">Notes</string>
    <string name="note">Note:</string>
    <string name="cancelled">Cancelled</string>
    <string name="cancel">Cancel</string>
    <string name="high_to_low">High to Low</string>
    <string name="low_to_high">Low to High</string>

    <string name="cancel_order">Cancel Order</string>
    <string name="cancel_order_message">Do you want to cancel this order?</string>
    <string name="type_cod">Type COD</string>

    <string name="your_notes">Your notes ...</string>
    <string name="cart_is_empty">Cart is empty</string>
    <string name="no_favourites">No Favourites</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="terms_of_sale">Terms of sale</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact us</string>
    <string name="rate_us">Rate us</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>

    <string name="log_out">Log out</string>
    <string name="delete_my_address">Delete My Address</string>

    <string name="edit">Edit</string>
    <string name="email_address">Email Address</string>
    <string name="birth_date">Birth of Date</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_address">Edit Address</string>

    <string name="ok">OK</string>
    <string name="sure_you_want_to_log_out">Sure you want to log out?</string>
    <string name="sure_you_want_to_proceed">Sure you want to proceed this action?</string>
    <string name="check_out">Check out</string>
    <string name="delivering_address">Delivering Address</string>
    <string name="next">Next</string>
    <string name="place_order">Place Order</string>
    <string name="track_order">Track My Order</string>

    <string name="delivery_fess">Delivery fess:</string>
    <string name="cash">Cash</string>
    <string name="credit_card">Credit Card</string>
    <string name="messa">Meza Card</string>
    <string name="your_order_has_been_placed_successfully">Your Order has been placed successfully</string>
    <string name="search">Search...</string>
    <string name="recent_searches">RECENT SEARCHES</string>
    <string name="clear_history"><u>Clear History</u></string>
    <string name="back">Back</string>
    <string name="sort_by">Sort By</string>
    <string name="price">Price</string>
    <string name="expected_arrival">Expected Arrival</string>
    <string name="added_to_cart">Added to cart</string>
    <string name="search_message">Please write a word for search.</string>
    <string name="crash_error">Sorry!, Something went wrong, we will fixing it soon.</string>
    <string name="restart">Restart</string>
    <string name="loading">Loading...</string>


</resources>
