<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusableInTouchMode="true"
    tools:context="com.twoam.cartello.View.ForgetPasswordActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cvParent"
        android:layout_width="match_parent"
        android:layout_height="77.5dp"
        android:layout_margin="4dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:divider="@android:color/transparent"
        android:dividerHeight="0.0px"
        android:elevation="8dp"
        app:cardElevation="7dp"
        app:cardPreventCornerOverlap="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="77.5dp">

            <ImageView
                android:id="@+id/ivBackForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="31dp"
                android:clickable="true"
                app:srcCompat="@drawable/back"
                android:background="?android:attr/selectableItemBackgroundBorderless"/>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="95.5dp"

                android:layout_marginTop="31dp"
                android:text="@string/forget_password"
                android:textAllCaps="false"
                android:textColor="@color/colorLabel"
                android:textSize="15sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <RelativeLayout
        android:id="@+id/rlEmail"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="317dp"
        android:layout_height="51dp"
        android:layout_below="@+id/cvParent"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="55dp"
        android:addStatesFromChildren="true"
        android:background="@drawable/custom_edit_text">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/tvHintEmail"
            android:background="@color/transparent"
            android:focusable="true"
            android:fontFamily="Poppins-Regular"
            android:hint="@string/your_email_address"
            android:imeOptions="actionDone"
            android:inputType="text|textNoSuggestions|textEmailAddress"
            android:nextFocusForward="@+id/etPassword"
            android:textColor="@color/colorLabel"
            android:textSize="13sp" />

        <requestFocus />

        <TextView
            android:id="@+id/tvHintEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:text="@string/email"
            android:textColor="@color/colorHintLabel"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvEmailError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etEmail"
            android:layout_toEndOf="@+id/tvHintEmail"
            android:clickable="true"

            android:text="@string/error_invalid_email"
            android:textColor="@color/error"
            android:textSize="12sp"
            android:visibility="invisible" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cvParent"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="38dp"
        android:layout_marginTop="28dp"
        android:text="@string/info"
        android:textAllCaps="false"
        android:textColor="@color/colorLabel"
        android:textSize="15sp"
        android:visibility="invisible" />

    <RelativeLayout
        android:id="@+id/rlCode"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="317dp"
        android:layout_height="51dp"
        android:layout_below="@+id/tvInfo"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="28dp"
        android:addStatesFromChildren="true"
        android:background="@drawable/custom_edit_text"
        android:visibility="invisible">

        <EditText
            android:id="@+id/etCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/tvHintCode"
            android:background="@color/transparent"
            android:digits="0123456789"
            android:fontFamily="Poppins-Regular"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:lines="1"
            android:textColor="@color/colorLabel"
            android:textSize="13sp" />

        <requestFocus />

        <TextView
            android:id="@+id/tvHintCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:text="@string/code"
            android:textColor="@color/colorHintLabel"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvCodeError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etCode"
            android:layout_toEndOf="@+id/tvHintCode"
            android:clickable="true"

            android:text="@string/error_invalid_code"
            android:textColor="@color/error"
            android:textSize="12sp"
            android:visibility="invisible" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnResend"
        android:layout_width="112dp"
        android:layout_height="33dp"
        android:layout_alignStart="@+id/tvInfo"
        android:layout_below="@+id/rlCode"
        android:layout_marginTop="19dp"
        android:background="@drawable/rounded_button"
        android:clickable="true"
        android:text="@string/resend"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="invisible" />

    <RelativeLayout
        android:id="@+id/rlPassword"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="317dp"
        android:layout_height="51dp"
        android:layout_below="@+id/cvParent"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="29dp"
        android:addStatesFromChildren="true"
        android:background="@drawable/custom_edit_text"
        android:visibility="invisible">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/tvHintPassword"
            android:background="@color/transparent"
            android:fontFamily="Poppins-Regular"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:nextFocusForward="@id/etConfirmPassword"
            android:textColor="@color/colorLabel"
            android:textSize="13sp" />

        <requestFocus />

        <TextView
            android:id="@+id/tvHintPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/password"
            android:textColor="@color/colorHintLabel"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvPasswordError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_toEndOf="@+id/tvHintPassword"
            android:clickable="true"
            android:text="@string/error_password"
            android:textColor="@color/error"
            android:textSize="12sp"
            android:visibility="invisible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlConfirmPassword"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="317dp"
        android:layout_height="51dp"
        android:layout_below="@+id/rlPassword"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="14dp"
        android:addStatesFromChildren="true"
        android:background="@drawable/custom_edit_text"
        android:visibility="invisible">

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/tvHintConfirmPassword"
            android:background="@color/transparent"
            android:fontFamily="Poppins-Regular"
            android:imeOptions="actionDone"
            android:inputType="textPassword|textNoSuggestions"
            android:maxLines="1"
            android:textColor="@color/colorLabel"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvHintConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/confirm_password"
            android:textColor="@color/colorHintLabel"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvConfirmPasswordError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etConfirmPassword"
            android:layout_toEndOf="@+id/tvHintConfirmPassword"
            android:clickable="true"
            android:text="@string/error_confirm_password"
            android:textColor="@color/error"
            android:textSize="12sp"
            android:visibility="invisible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlVerifyPassword"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="317dp"
        android:layout_height="51dp"
        android:layout_below="@+id/rlConfirmPassword"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="14dp"
        android:addStatesFromChildren="true"
        android:background="@drawable/custom_edit_text"
        android:visibility="invisible"
        >

        <EditText
            android:id="@+id/etVerifyPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/tvHintVerifyPassword"
            android:background="@color/transparent"
            android:fontFamily="Poppins-Regular"
            android:imeOptions="actionDone"
            android:inputType="textPassword|textNoSuggestions"
            android:maxLines="1"
            android:textColor="@color/colorLabel"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvHintVerifyPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/verify_password"
            android:textColor="@color/colorHintLabel"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvVerifyPasswordError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etVerifyPassword"
            android:layout_toEndOf="@+id/tvHintVerifyPassword"
            android:clickable="true"
            android:text="@string/error_confirm_password"
            android:textColor="@color/error"
            android:textSize="12sp"
            android:visibility="invisible" />
    </RelativeLayout>
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="317dp"
        android:layout_height="51dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="41dp"
        android:background="@drawable/rounded_button"
        android:clickable="true"
        android:fontFamily="Poppins-Medium"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="317dp"
        android:layout_height="51dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="41dp"
        android:background="@drawable/rounded_button"
        android:clickable="true"
        android:fontFamily="Poppins-Medium"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:visibility="invisible" />
</RelativeLayout>
