<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlOptions"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    
<android.support.v7.widget.CardView
    android:id="@+id/cvCancel"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    app:cardElevation="1dp"
    app:cardCornerRadius="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginBottom="10dp"
    android:layout_alignParentBottom="true"
    >
    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:gravity="center"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/cancel"
        android:textColor="@color/colorApp"
        android:textSize="21sp"
        android:textStyle="bold"
        android:duplicateParentState="true"
        android:layout_marginBottom="10dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"/>
</android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvLow"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardElevation="1dp"
        app:cardCornerRadius="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/cvCancel"
        >
        <TextView
            android:id="@+id/tvLow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/low_to_high"
            android:textColor="@color/colorApp"
            android:textSize="21sp"
            android:textStyle="bold"
            android:duplicateParentState="true"
            android:background="?android:attr/selectableItemBackgroundBorderless"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvHigh"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardElevation="1dp"
        app:cardCornerRadius="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_above="@+id/cvLow"
        >
        <TextView
            android:id="@+id/tvHigh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/high_to_low"
            android:textColor="@color/colorApp"
            android:textSize="21sp"
            android:textStyle="bold"
            android:duplicateParentState="true"
            android:background="?android:attr/selectableItemBackgroundBorderless"/>
    </android.support.v7.widget.CardView>
  
</RelativeLayout>

